# dlya_antonova

./: Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
robot_dlya_antonova/: robot.py  server.py
tests/: test_robot_dlya_antonova.py  utils.py
